# lol_calendar

./: .gitignore  LICENSE  README.md  claude.md  consts.py  example.json  generate_ics.py  main.py  models.py  pyproject.toml
.github/workflows/: schedule.yml  update-calendar.yml
games/2023全球总决赛/: 2023全球总决赛.ics
games/2024全球总决赛/: 2024全球总决赛.ics
games/2024季中冠军赛/: 2024季中冠军赛.ics
games/2024职业联赛/: 2024职业联赛.ics
games/2025全球总决赛/: 2025全球总决赛.ics
games/2025季中冠军赛/: 2025季中冠军赛.ics
games/2025职业联赛/: 2025职业联赛.ics
games/2026季中冠军赛/: 2026季中冠军赛.ics
games/2026职业联赛/: 2026职业联赛.ics
outputs/: 2023LPL全明星周末.ics  2023全球总决赛.ics  2023全球总决赛资格赛.ics  2023德玛西亚杯.ics  2024LPL全明星双城之夜.ics  2024全球总决赛.ics  2024季中冠军赛.ics  2024德玛西亚杯.ics  2024职业联赛.ics  2024英雄联盟传奇杯.ics  2024英雄联盟传奇杯S2.ics  2024解说主持杯.ics  2025全球先锋赛.ics  2025季中冠军赛.ics  2025电竞世界杯《英雄联盟》项目.ics  2025职业联赛.ics  LOL赛事.ics  大乱斗全球总决赛.ics  第十九届城市英雄争霸赛.ics  第十八届城市英雄争霸赛.ics
teams/: .ics
teams/10/: 10.ics
teams/100/: 100.ics
teams/100T/: 100T.ics
teams/1OOT/: 1OOT.ics
teams/AL/: AL.ics
teams/BDS/: BDS.ics
teams/BLG/: BLG.ics
teams/C9/: C9.ics
teams/CFO/: CFO.ics
teams/D1L/: D1L.ics
teams/D1W/: D1W.ics
teams/DCG/: DCG.ics
teams/DFM/: DFM.ics
teams/DK/: DK.ics
teams/EDG/: EDG.ics
teams/EST/: EST.ics
teams/FLY/: FLY.ics
teams/FNC/: FNC.ics
teams/FPX/: FPX.ics
teams/FUR/: FUR.ics
teams/G1 8/: G1 8.ics
teams/G1L/: G1L.ics
teams/G2/: G2.ics
teams/GAM/: GAM.ics
teams/HLE/: HLE.ics
teams/IG/: IG.ics
teams/JDG/: JDG.ics
teams/KC/: KC.ics
teams/KT/: KT.ics
teams/LGD/: LGD.ics
teams/R7/: R7.ics
(+44 files in other folders)
