[project]
name = "lol-calendar"
version = "0.1.0"
description = ""
authors = [
    {name = "Kabigon Zhao",email = "meowstic.zyx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "ics (>=0.7.2,<0.8.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "datetime (>=5.5,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.0"

